cursive-bootstrap/tests/ui/W-CON/W-CON-0009.cursive
// RUN: compile-fail
// DIAG: E-UNS-0101
// SPEC: 1.4
// DESC: Unsupported construct in Cursive0 subset (closure)

public procedure main(move ctx: Context) -> i32 {
    let f = closure  //~ ERROR E-UNS-0101
    return 0
}

